[project]
name = "pink_balancer"
version = "1.0.0"
description = "The Pink balancer is a work-in-progress agent for Upkie wheeled bipeds"
requires-python = ">= 3.9"
dependencies = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pink_balancer = { path = ".", editable = true }

[tool.pixi.dependencies]
gin-config = ">=0.5.0"
meshcat-shapes = ">=0.3.0"
pink = ">=3.0.0,<4"
pinocchio = ">=3.1.0,<4"
qpmpc = ">=3.0.1,<4"
qpsolvers = ">=4.2.0,<5"
upkie = "==8.0.0"

[tool.pixi.feature.agent]
tasks.agent = "python run_agent.py"

[tool.pixi.feature.pack]
dependencies = { pixi-pack = "*" }
tasks.pack-to-upkie = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-non-wheel"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
agent = { features = ["agent"], solve-group = "default" }
pack = { features = ["pack"], solve-group = "default" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D100",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D104",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D204",  # ruff does not know we use Doxygen docstrings
    "D205",  # ruff does not know we use Doxygen docstrings
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
